# prayer-pause

./: .gitignore  LICENSE  README.md  config.json  prayer-pause.spec  pyproject.toml  requirements.txt
prayer_pause/: api.py  locker.py  main.py  notifier.py  scheduler.py  utils.py
prayer_pause/core/: api.py  notifier.py  scheduler.py
prayer_pause/ui/: locker.py  settings.py  tray.py
src/prayer_pause/: main.py  utils.py
src/prayer_pause/ui/: locker.py  tray.py
