[project]
name = "prayer-pause"
authors = [{ name = "Abdullah Alhamdi", email = "trymemain.pb.hug@gmail.com" }]
description = ""
version = 0.1
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "requests==2.33.1",
    "APScheduler==3.11.2",
    "plyer==2.1.0",
    "python-dotenv==1.2.2",
]